--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
-	git config --global user.name blabla  задади юсернейм
-git config --global user.email blabal@bla    задати емейл 
-git init  -  инициализировать репозиторий 
-git status    -   проерить статус репозитория 
-git add  -  выбрать файл в репозитории
-git commit   -  внести изменения в файл
-git log  
-git checkout
-git branch
-git push
-git pull
-git merge
-git clone
+<ul>
+	<li>git config --global user.name blabla  задади юсернейм</li>
+<li>git config --global user.email blabal@bla    задати емейл </li>
+<li>git init  -  инициализировать репозиторий </li>
+<li>git status    -   проерить статус репозитория </li>
+<li>git add  -  выбрать файл в репозитории</li>
+<li>git commit   -  внести изменения в файл</li>
+<li>git log  </li>
+<li>git checkout</li>
+<li>git branch</li>
+<li>git pull</li>
+<li>git merge</li>
+<li>git clone</li>
+	</ul>
