--- a/index.html
+++ b/index.html
@@ -5,10 +5,19 @@
 <li>git status    -   проерить статус репозитория </li>
 <li>git add  -  выбрать файл в репозитории</li>
 <li>git commit   -  внести изменения в файл</li>
-<li>git log  </li>
-<li>git checkout</li>
-<li>git branch</li>
-<li>git pull</li>
-<li>git merge</li>
-<li>git clone</li>
+<li>git log - просмотреть историю коммитов </li>
+<li>git checkout копировать файлы из истории или сцены в рабочую директорию. Также она может использоваться для переключения между ветками.</li>
+<li>git branch - может использоваться для переключения между ветками.</li>
+<li>git pull - автоматически получить изменения из удалённой ветки и слить их со своей текущей.</li>
+<li>git merge - выполнить слияние веток </li>
+<li>git clone  - создать клон копию удаленного репозитория</li>
+	</ul>
+<b>gitignore нужен для скрытия файлов и папок от системы контроля версий Git. Обычно используеться для скрытия паролей и конфиг файлов</b>
+<p><h1>Advanced</h1></p>
+<ul>
+	<li>git revert - отменить последний комит</li>
+<li>git reset слиянее веток. Подробнее <a href="https://git-scm.com/book/ru/v2/%D0%98%D0%BD%D1%81%D1%82%D1%80%D1%83%D0%BC%D0%B5%D0%BD%D1%82%D1%8B-Git-%D0%A0%D0%B0%D1%81%D0%BA%D1%80%D1%8B%D1%82%D0%B8%D0%B5-%D1%82%D0%B0%D0%B9%D0%BD-reset">сдесь</a>  </li>
+<li>git rebase - С помощью команды rebase вы можете взять все коммиты из одной ветки и в том же порядке применить их к другой ветке.</li>
+<li>git cherry-pick - используется для того чтобы взять изменения, внесённые каким-либо коммитом, и попытаться применить их заново в виде нового коммита наверху текущей ветки. </li>
+<li>git stash - скрывает все сделанные изменения и переводит код в состояние HEAD. </li>
 	</ul>
